# bilingualsub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .secrets.baseline  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  NOTICE  README.md  README.zh-TW.md  cliproxyapi.conf  docker-compose.yml  env.example  glossary.json  preview-font-demo.html  preview-font-demo2.html  preview-intro-watermark.html  preview-watermark-font.html  pyproject.toml  start.sh
.claude/: settings.json
.claude/hooks/: post-edit-lint.sh  pre-commit-check.sh  quality-gate.sh
.github/workflows/: ci.yml  dependency-review.yml  deploy-hf.yml  live-e2e-canary.yml
.playwright-mcp/: page-2026-04-12T00-57-13-256Z.yml  page-2026-04-12T00-57-43-283Z.yml  page-2026-04-12T00-58-29-138Z.yml  page-2026-04-12T01-14-36-533Z.yml  page-2026-04-12T01-15-20-007Z.yml  page-2026-04-12T01-15-45-733Z.yml  page-2026-04-12T01-16-15-766Z.yml
assets/fonts/: LICENSE
docs/arch/: intro-watermark.md  visual-description-mode.md
docs/design/: intro-watermark.md  v2-smart-subtitle-pipeline.md  visual-description-mode.md
frontend/: glossary.json  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  constants.ts  index.css  types.ts
frontend/src/api/: client.ts  errors.ts
frontend/src/components/: DisclaimerDialog.test.tsx  DisclaimerDialog.tsx  DownloadLinks.test.tsx  DownloadLinks.tsx  GlossaryPanel.tsx  LanguageSwitcher.tsx  ProgressTracker.tsx  SubtitleEditor.test.tsx  SubtitleEditor.tsx  UrlInput.tsx  VideoPreview.tsx
frontend/src/hooks/: useJob.ts
frontend/src/i18n/: en.json  zh-TW.json
frontend/src/test/: setup.ts
frontend/src/utils/: download.test.ts  download.ts  srt.ts
src/bilingualsub/: __init__.py
src/bilingualsub/api/: __init__.py  app.py  constants.py  errors.py  jobs.py  logging.py  pipeline.py  routes.py  schemas.py
src/bilingualsub/core/: __init__.py  downloader.py  glossary.py  merger.py  subtitle.py  subtitle_fetcher.py  transcriber.py  translator.py  visual_describer.py
src/bilingualsub/formats/: __init__.py  ass.py  srt.py
src/bilingualsub/utils/: __init__.py  config.py  ffmpeg.py
tests/: __init__.py  conftest.py
tests/e2e/: test_filename_e2e.py  test_workflow_skeleton.py
tests/integration/: __init__.py  conftest.py  test_api_contract.py  test_error_propagation.py  test_format_burn_in.py  test_full_subtitle_pipeline.py  test_intro_concat_audio.py  test_real_api.py  test_transcribe_translate.py  test_translate_merge_serialize.py  test_visual_description_pipeline.py
tests/unit/api/: test_jobs.py  test_pipeline.py  test_routes.py  test_schemas.py
tests/unit/core/: test_downloader.py  test_glossary.py  test_merger.py  test_subtitle_fetcher.py  test_transcriber.py  test_translator.py  test_visual_describer.py
tests/unit/formats/: __init__.py  test_ass.py  test_srt.py
tests/unit/utils/: test_config.py  test_ffmpeg.py  test_ffmpeg_intro.py
