[project]
name = "bilingualsub"
version = "0.1.0"
description = "YouTube bilingual subtitle generator with LLM translation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BilingualSub Team" }]
keywords = ["youtube", "subtitle", "translation", "whisper", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "yt-dlp>=2024.0.0",
    "groq>=0.11.0",
    "agno>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "fastapi>=0.115.0",
    "sse-starlette>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "ollama>=0.6.1",
    "openai>=2.17.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "respx>=0.21.0",
    "vulture>=2.11",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]
e2e = [
    "playwright>=1.44.0",
    "pytest-playwright>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/Mapleeeeeeeeeee/bilingualsub"
Repository = "https://github.com/Mapleeeeeeeeeee/bilingualsub"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bilingualsub"]

# ============================================================
# Ruff - Linting & Formatting (replaces flake8, isort, black)
# ============================================================
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches
]

[tool.ruff.lint.isort]
known-first-party = ["bilingualsub"]

[tool.ruff.lint.per-file-ignores]
"src/bilingualsub/api/app.py" = ["E402"]  # load_dotenv() must run before other imports
"tests/**/*.py" = [
    "ARG",     # Unused function argument (common in parametrized tests)
    "PLR2004", # Magic value comparison
    "RUF001",  # Ambiguous unicode chars (Chinese chars in test data)
    "RUF043",  # Regex patterns in match= (normal pytest usage)
    "E501",    # Line too long (long docstrings in BDD tests)
]

# ============================================================
# Mypy - Static Type Checking
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "yt_dlp.*",
    "groq.*",
    "agno.*",
    "ffmpeg.*",
    "openai.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest - Testing
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=bilingualsub",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use real dependencies)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow tests (skipped by default)",
    "subtitle_only: Subtitle generation tests (no FFmpeg required)",
    "burn_in: Video burn-in tests (requires FFmpeg)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/bilingualsub"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ============================================================
# Vulture - Dead Code Detection
# ============================================================
[tool.vulture]
min_confidence = 80
paths = ["src/bilingualsub"]
exclude = ["tests/", "*/__pycache__/"]
sort_by_size = true

# ============================================================
# Bandit - Security Vulnerability Scanner
# ============================================================
[tool.bandit]
targets = ["src/bilingualsub"]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)
